[tool.poetry]
name = "problemssolution_myself"
version = "0.1.0"
description = ""
authors = ["Nu2-Cracker <orcinusorca1758dv6932@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
